--- a/package.json
+++ b/package.json
@@ -14,11 +14,16 @@
     "react-dom": "$react-dom"
   },
   "dependencies": {
+    "@sanity/image-url": "^1.1.0",
+    "@sanity/vision": "^3.70.0",
     "@tailwindcss/typography": "^0.5.16",
     "next": "15.1.4",
     "next-auth": "^5.0.0-beta.25",
+    "next-sanity": "^9.8.37",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sanity": "^3.70.0",
+    "styled-components": "^6.1.14",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
