--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.70.0",
     "@tailwindcss/typography": "^0.5.16",
+    "markdown-it": "^14.1.0",
     "next": "15.1.4",
     "next-auth": "^5.0.0-beta.25",
     "next-sanity": "^9.8.37",
@@ -33,6 +34,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/markdown-it": "^14.1.2",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
