--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.70.0",
     "@tailwindcss/typography": "^0.5.16",
+    "@uiw/react-md-editor": "^4.0.5",
     "markdown-it": "^14.1.0",
     "next": "15.1.4",
     "next-auth": "^5.0.0-beta.25",
