--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "sanity-plugin-markdown": "^5.0.0",
     "server-only": "^0.0.1",
     "styled-components": "^6.1.14",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
