--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "sanity": "^3.70.0",
     "sanity-plugin-markdown": "^5.0.0",
     "server-only": "^0.0.1",
+    "slugify": "^1.6.6",
     "styled-components": "^6.1.14",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
